<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profesori"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.toni.pjesmarrjaestudenteve_v1.profesori">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="0dp"
        android:weightSum="80"
        >

        <LinearLayout
            android:id="@+id/lnKrijoPjesmarrjen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Krijo Pjesmarrjen"
            android:background="@color/colorGray1"
            android:orientation="vertical"
            android:layout_weight="20"
            android:weightSum="100"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/icons8_create_archive_50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/tvKrijoPjesmarrje"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                />



        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnKrijoPdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gjenero perseri Pdf"
            android:background="@color/colorGray2"
            android:layout_weight="20"
            android:orientation="vertical"
            android:weightSum="100"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/iconspdf50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/tvGjeneroPdf"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnShikoPjesmarrje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shiko Pjesmarrjen"
            android:background="@color/colorGray3"
            android:layout_weight="20"
            android:orientation="vertical"
            android:weightSum="100"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/iconschecklist50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/tvShikoPjesmarrjen"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ndihme"
            android:background="@color/colorGray4"
            android:layout_weight="20"
            android:orientation="vertical"
            android:weightSum="100"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:src="@drawable/icons8_help_50"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="Instruksione"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
